# sqlite3-uuid

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yaml
src/: uuid.c
test/: conftest.py  test_uuid.py
