[project]
name = "sqlite3-uuid"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = ["apsw", "pytest"]

[tool.tbump]
github_url = "https://github.com/benwebber/sqlite3-uuid/"

[tool.tbump.version]
current = "1.2.0"
regex = '''
  (?P<major>\d+)
  \.(?P<minor>\d+)
  \.(?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "VERSION"
